Fix overflow scrolling

--- a/src/app.scss
+++ b/src/app.scss
@@ -45,6 +45,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 html {
